[package]
name = "lancer-enclave-connector"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { workspace = true }
anyhow.workspace = true
base64 ={ workspace = true }
lancer-transport = { version = "0.1.0", path = "../lancer-transport" }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
walrus-core = { workspace = true }
sui-types = { workspace = true}
async-tempfile = { workspace = true }
tokio-tar = { workspace = true }
futures = { workspace = true }
seal = { workspace = true }
hex = { workspace = true }
fastcrypto = { workspace = true }
bcs = { workspace = true }
serde_json = { workspace = true }
tokio-vsock = { workspace = true }
serde_bytes = { workspace = true }
aws-nitro-enclaves-nsm-api = "0.4.0"
