[package]
name = "lancer-enclave-server"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { workspace = true }
anyhow.workspace = true
axum = { workspace = true }
axum-extra = { workspace = true }
base64 ={ workspace = true }
bson = { workspace = true }
lancer-transport = { version = "0.1.0", path = "../lancer-transport" }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
walrus-core = { workspace = true }
sui-types = { workspace = true}
async-tempfile = { workspace = true }
tokio-tar = { workspace = true }
futures = { workspace = true }
anyhow-http = { workspace = true}
mime = "0.3.17"
