[package]
name = "lancer-runner-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
axum = "0.8.4"
axum-extra = "0.10.1"
base64 = "0.22.1"
rand = "0.8"
rsa = "0.9.8"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.44.2", features = ["full"] }
