[package]
name = "lancer-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
test-cluster = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm"}
sui-types = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
move-core-types = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
sui-move-build = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
sui-framework = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
sui-json-rpc-types = { git = "https://github.com/aankor/sui.git", branch = "safe-disasm" }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
anyhow.workspace = true
# gluon = { git = "https://github.com/gluon-lang/gluon.git" }
# gluon_codegen = { git = "https://github.com/gluon-lang/gluon.git" }
gluon = { path = "/home/aankor/src/gluon" }
gluon_codegen = { path = "/home/aankor/src/gluon/codegen" }
serde = { version = "1.0.219", features = ["derive"] }
clap.workspace = true
take_mut = "0.2.2"
fastcrypto = "0.1.9"
