[package]
name = "lancer-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
test-cluster = { git = "https://github.com/aankor/sui.git", branch = "testing-access"}
sui-types = { git = "https://github.com/aankor/sui.git", branch = "testing-access" }
move-core-types = { git = "https://github.com/aankor/sui.git", branch = "testing-access" }
sui-move-build = { git = "https://github.com/aankor/sui.git", branch = "testing-access" }
sui-framework = { git = "https://github.com/aankor/sui.git", branch = "testing-access" }
sui-json-rpc-types = { git = "https://github.com/aankor/sui.git", branch = "testing-access" }
sui-swarm-config = { git = "https://github.com/aankor/sui.git", branch = "testing-access" }
sui-keys = { git = "https://github.com/aankor/sui.git", branch = "testing-access" }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
anyhow.workspace = true
# gluon = { git = "https://github.com/gluon-lang/gluon.git" }
# gluon_codegen = { git = "https://github.com/gluon-lang/gluon.git" }
gluon = { path = "/home/aankor/src/gluon" }
gluon_codegen = { path = "/home/aankor/src/gluon/codegen" }
serde = { version = "1.0.219", features = ["derive"] }
clap.workspace = true
take_mut = "0.2.2"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
rand = "0.8.5"
