[package]
name = "lancer-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
test-cluster = { workspace = true}
sui-types = { workspace = true}
move-core-types = { workspace = true}
sui-move-build = { workspace = true}
sui-framework = { workspace = true}
sui-json-rpc-types = { workspace = true}
sui-swarm-config = { workspace = true}
sui-keys = { workspace = true}
tokio = { workspace = true}
serde_json = { workspace = true}
anyhow.workspace = true
# gluon = { git = "https://github.com/gluon-lang/gluon.git" }
# gluon_codegen = { git = "https://github.com/gluon-lang/gluon.git" }
gluon = { workspace = true}
gluon_codegen = { workspace = true}
serde = { workspace = true}
clap.workspace = true
take_mut = "0.2.2"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
rand = { workspace = true}
async-tempfile = { workspace = true}
sui-core = { workspace = true}
bcs.workspace = true
