[package]
name = "lancer-server"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sui-sdk = { workspace = true }
sui-types = { workspace = true }
sui-config = { workspace = true }
sui-keys = { workspace = true }
shared-crypto = { workspace = true }
move-core-types = { workspace = true }
walrus-core = { workspace = true }
walrus-sdk = { workspace = true }
walrus-sui = { workspace = true }
sqlx = { workspace = true }
anyhow-http = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bson = { workspace = true }
hex = { workspace = true }
seal = { workspace = true }
lancer-transport = { path = "../lancer-transport" }
bcs = { workspace = true }
serde_json = { workspace = true }
tokio-vsock = { workspace = true }
futures = { workspace = true }