[package]
name = "snapshot-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
sui-core = { workspace = true }
sui-snapshot = { workspace = true }
sui-types = { workspace = true }
move-bytecode-utils = { workspace = true }
move-core-types = { workspace = true }
move-binary-format = { workspace = true }
sui-json-rpc-types = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }